# trading-game

./: Dockerfile  README.md  docker-compose.yml  requirements.txt  slumber.sh
cxx/: CMakeLists.txt  common.pb.cc  common.pb.h  common.proto  conanfile.py
cxx/exchange/: Account.cpp  Account.h  CMakeLists.txt  Exchange.cpp  Exchange.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Price.cpp  Price.h  PriceLevel.cpp  PriceLevel.h
cxx/server/: CMakeLists.txt  GameServer.cpp  GameServer.h  ProtoStructs.h  UnixConnection.cpp  UnixConnection.h
cxx/startup/: main.cpp  proto_test.cpp
cxx/tests/: account_tests.cpp  exchange_tests.cpp  order_book_tests.cpp  price_level_tests.cpp  price_tests.cpp
python/: common_pb2.py  credentials.txt  game_manager.py  main.py  market_game.py  markets.json  side_game.py  socket_manager.py  utils.py  width_game.py
python/templates/: index.html  login.html  market.html  open.html  results.html  width.html
web/: config.json  main.py
web/templates/: width.html
